...
            },
          },
        ]
      );
    } else {
      Alert.alert('Conta criada!', `Bem-vindo(a), ${dados.nome}! Faça o login.`, [
        { text: 'OK', onPress: () => setTelaAuth('login') },
      ]);
    }
  };

  const handleBiometria = async () => {
    await autenticarBiometria();
...

  // ========================
  // HANDLERS PRODUTOS
  // ========================
  const handleAdicionarProduto = async (dados) => {
    const novo = await adicionarProduto(dados);
    Alert.alert('Produto salvo!', `${novo.name} foi adicionado.`, [
      { text: 'OK', onPress: () => { setTelaAdicionarProduto(false); setProdutoParaEditar(null); } },
    ]);
  };

  const handleEditarProduto = async (dados) => {
    await editarProduto(produtoParaEditar.id, dados);
...
